src/components/Footer/Footer.css
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

footer {
    padding: 5rem;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    row-gap: 3rem;
    background: linear-gradient(#000000, #092819, #000000);
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    font-family: 'Gotham', sans-serif;
    color: #fff;
    font-size: 1.2rem;
    font-weight: 400;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.footer__about__para {
    line-height: 1.5;
}

.footer__link:link,
.footer__link:visited {
    /* removes override */
    opacity: 1;
    text-decoration: none;
    color: #fff;
}

.footer__heading__useful {
    margin-bottom: 0.8rem;
}

.section {
    text-align: left;
}

.footer__useful__link:not(:last-child) {
    margin-bottom: 1.2rem;
}

.footer__useful__link::before {
    vertical-align: middle;
    background-color: #2CB774;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    content: "";
    display: inline-block;
    width: 0.6rem;
    height: 0.6rem;
    margin-right: 10px;
    margin-bottom: 4px;
}

.footer__end {
    grid-column: 1/-1;
    display: flex;
}

.footer__socials {
    margin-left: auto;
    display: flex;
    gap: 1.2rem;
    position: relative;
}

.clip {
    cursor: pointer;
}

.clip:hover:before {
    position: absolute;
    transform: translate(-30%, -100%);
    font-size: 0.9rem;
    padding: 0.5rem;
    border-radius: 10px;
    content: attr(data-copy-status);
    display: inline-block;
    background-color: #000;
    color: #fff;
    -webkit-transform: translate(-30%, -100%);
    -moz-transform: translate(-30%, -100%);
    -ms-transform: translate(-30%, -100%);
    -o-transform: translate(-30%, -100%);
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}

@media (max-width: 950px) {
    footer {
        padding: 4rem;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 0.3fr 1fr 0.5fr;
        row-gap: 2.5rem;
    }

    .footer__contact {
        justify-self: end;
    }
}


@media (max-width: 887px) {
    footer {
        padding: 2.5rem;
        grid-template-columns: 1fr;
        grid-template-rows: 0.3fr 0.1fr 1fr;
        row-gap: 1rem;
        font-size: 0.8rem;
    }

    .footer__contact {
        justify-self: start;
    }

    .section {
        width: fit-content;
    }

    .footer__socials {
        margin: 1rem 0;
    }

    .footer__end {
        flex-direction: column;
    }

    .footer__useful__link:not(:last-child) {
        margin-bottom: 0.6rem;
    }

    .footer__heading {
        font-size: 1.3rem;
        font-weight: bold;
    }

    .clip:hover:before {
        transform: translate(-20%, -100%);
        -webkit-transform: translate(-20%, -100%);
        -moz-transform: translate(-20%, -100%);
        -ms-transform: translate(-20%, -100%);
        -o-transform: translate(-20%, -100%);
    }
}

@media (max-width: 400px) {
    footer {
        padding: 2rem;
        font-size: 0.81rem;
    }

    .footer__heading {
        font-size: 1rem;
    }
}

